2009-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, include/pqxx/result.hxx,
 include/pqxx/util.hxx, src/connection_base.cxx, src/binarystring.cxx,
 src/result.cxx:
  - Made PQAlloc API conform more (almost entirely) to shared_ptr
  - Renamed scoped_array::clear() to reset() to match shared_ptr
  - Hid PQAlloc's derivation from shared_ptr a bit more to narrow interface
2009-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, include/pqxx/util.hxx:
  - Check for separate TR1 header directory
  - Configure check & option for TR1 namespace
  - Include <tr1/memory> if available, or <memory> otherwise
2009-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
  - Yet more introductory documentation
 README-UPGRADE:
  - Added 3.1 section
2009-01-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/basic_connection.hxx, src/binarystring.cxx, src/util.cxx:
  - Added includes that may be needed in some situations
 test/test000.cxx:
  - More consistent spacing
2009-01-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am:
  - Forgot to add new strconv headers
 include/pqxx/pqxx:
  - Ordered alphabetically
  - Updated for completeness (probably no practical difference)
 include/pqxx/strconv.hxx:
  - Provide string_traits<> for non-const "char *"
 include/pqxx/util.hxx:
  - Added extra example to "getting started" page
  - Compile fixes for examples
 src/connection_base.cxx, src/cursor.cxx:
  - Include strconv where (sometimes) needed
2008-12-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/prepared_statement.hxx,
 include/pqxx/result.hxx, include/pqxx/strconv, include/pqxx/strconv.hxx,
 include/pqxx/util.hxx, src/Makefile.am, src/strconv.cxx, src/util.cxx:
  - Broke string conversion out into its own module
2008-12-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - Restructured chapters for more balance
  - Made text less tedious in places